fixtures/error/retrieveSong_notFound.js
module.exports = {
    statusCode: 404,
    detail: 'Song not found'
  };
  